<resources>
    <string name="app_name">AmuseMe</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hey">hey</string>
    <string name="discover_jokes">Discover Jokes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_jokes">Favorite Jokes</string>
    <string name="discover_jokes_fragment">Discover Jokes Fragment</string>
    <string name="favorite_jokes_fragment">Favorite Jokes Fragment</string>
    <string name="your_jokes_fragment">Your Jokes Fragment</string>
    <string name="your_jokes">Your Jokes</string>
    <string name="joke_of_the_day_fragment">Joke Of The Day Fragment</string>
    <string name="joke_of_the_day">Joke Of The Day</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="about_us">About Us</string>
    <string name="delete">Delete</string>
    <string name="favorite_joke">Favorite Joke</string>
    <string name="remove">Remove</string>
    <string name="let_s_match_your_n_unique_n_sense_of_humor">Let\'s match your\n unique\n sense of humor</string>
    <string name="joke_title_njoke_text_njoke_author">Joke Title\nJoke Text\nJoke Author</string>
    <string name="nice">Nice</string>
    <string name="bad">Bad</string>
    <string name="setup">setup</string>
    <string name="punchline">punchline</string>
    <string name="category">category</string>
    <string name="date">date</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="text">Text:</string>
    <string name="title">Title:</string>
    <string name="edit_your_joke">Edit your joke</string>
    <string name="punchline_joke">Punchline Joke</string>
    <string name="category_joke">Category Joke</string>
</resources>