<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:background="@drawable/rounded_edges">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textJoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_jokes" />

        <TextView
            android:id="@+id/punchlineJoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punchline_joke" />

        <TextView
            android:id="@+id/categoryJoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_joke" />

    </LinearLayout>
    <Button
        android:id="@+id/removeFavoriteJoke"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/remove"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_1000"
        />
</LinearLayout>